delete default/move kine

--- a/Plugins/EnginePlugins/SQEX/SQEXSEAD/SQEXSEAD.uplugin
+++ b/Plugins/EnginePlugins/SQEX/SQEXSEAD/SQEXSEAD.uplugin
@@ -14,12 +14,16 @@
 	"CanContainContent": false,
 	"IsBetaVersion": false,
 	"IsExperimentalVersion": false,
-	"Installed": false,
 	"Modules": [
 		{
 			"Name": "SQEXSEAD",
 			"Type": "Runtime",
 			"LoadingPhase": "PostConfigInit"
-		}
+		},
+		{
+			"Name" : "SQEXSEADEd",
+			"Type" : "Editor",
+			"LoadingPhase" : "PostConfigInit"
+		},
 	]
 }
