Revert "Added Kinedriver and Bonamik Factories"
This reverts commit 5e3a101e832df75a111c39a299198afd0081860d.

--- a/TresGame.uproject
+++ b/TresGame.uproject
@@ -7,18 +7,12 @@
 		{
 			"Name": "KineDriverRt",
 			"Type": "Runtime",
-			"LoadingPhase": "Default",
-			"AdditionalDependencies": [
-				"UnrealEd"
-			]
+			"LoadingPhase": "Default"
 		},
 		{
 			"Name": "BonamikRt",
 			"Type": "Runtime",
-			"LoadingPhase": "Default",
-			"AdditionalDependencies": [
-				"UnrealEd"
-			]
+			"LoadingPhase": "Default"
 		},
 		{
 			"Name": "KBDRt",
