--- a/Plugins/EnginePlugins/SQEX/SQEXSEAD/SQEXSEAD.uplugin
+++ b/Plugins/EnginePlugins/SQEX/SQEXSEAD/SQEXSEAD.uplugin
@@ -19,6 +19,11 @@
 			"Name": "SQEXSEAD",
 			"Type": "Runtime",
 			"LoadingPhase": "PostConfigInit"
+		},
+		{
+			"Name" : "SQEXSEADEd",
+			"Type" : "Editor",
+			"LoadingPhase" : "PostConfigInit"
 		}
 	]
 }
