Fixes for packaging

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -16,6 +16,14 @@ BlueprintEditorPromotionTest=(FirstMeshPath=(FilePath=""),SecondMeshPath=(FilePa
 +TestLevelFolders=TestMaps
 DefaultScreenshotResolution=(X=1920,Y=1080)
 
+[/Script/EngineSettings.GameMapsSettings]
+bOffsetPlayerGamepadIds=True
+
+[/Script/Engine.Engine]
+GameViewportClientClassName=/Script/TresGame.TresGameViewportClient
+WorldSettingsClassName=/Script/TresGame.TresWorldSettings
+LevelScriptActorClassName=/Script/TresGame.TresLevelScriptActor
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
