update delegates to be bp callable

--- a/TresGame.uproject
+++ b/TresGame.uproject
@@ -216,6 +216,10 @@
 		{
 			"Name": "WindowsMoviePlayer",
 			"Enabled": true
+		},
+		{
+			"Name": "SwissArmyKnife",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
