--- a/TresGame.uproject
+++ b/TresGame.uproject
@@ -207,12 +207,18 @@
 		},
 		{
 			"Name": "WmfMedia",
-			"Enabled": false
+			"Enabled": true
+		},
+		{
+			"Name": "AvfMedia",
+			"Enabled": true
+		},
+		{
+			"Name": "WindowsMoviePlayer",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
-		"PS4",
-		"WindowsNoEditor",
-		"XboxOne"
+		"WindowsNoEditor"
 	]
 }
